--- a/arches_arcgispro_addin/SaveResource.xaml
+++ b/arches_arcgispro_addin/SaveResource.xaml
@@ -32,9 +32,10 @@
         </DockPanel>
         <TextBlock HorizontalAlignment="Left" Margin="50,20,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="1. Select a geometry from Arches layer to register to edit and click the Get button"/>
-
         <TextBlock HorizontalAlignment="Left" Margin="50,80,0,0" Grid.Row="1" Text="Arches Layer" VerticalAlignment="Top" Width="130"/>
-        <ComboBox HorizontalAlignment="Center" Margin="0,100,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" />
+        <ComboBox HorizontalAlignment="Center" Margin="0,100,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" 
+                  ItemsSource="{Binding FeatureLayers}" DisplayMemberPath="Name" 
+                  SelectedItem="{Binding SelectedFeatureLayer}" />
         <Button Content="Get Arches Parameters" HorizontalAlignment="Center" Margin="0,140,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Click="Button_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="50,190,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="2. Select a geometry and click the Submit button to replace Arches geometry" />
