--- a/arches_arcgispro_addin/SaveResource.xaml
+++ b/arches_arcgispro_addin/SaveResource.xaml
@@ -32,19 +32,23 @@
         </DockPanel>
         <TextBlock HorizontalAlignment="Left" Margin="50,20,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="1. Select a geometry from Arches layer to register to edit and click the Get button"/>
-        <TextBlock HorizontalAlignment="Left" Margin="50,80,0,0" Grid.Row="1" Text="Arches Layer" VerticalAlignment="Top" Width="130"/>
+        <!--TextBlock HorizontalAlignment="Left" Margin="50,80,0,0" Grid.Row="1" Text="Arches Layer" VerticalAlignment="Top" Width="130"/>
         <ComboBox HorizontalAlignment="Center" Margin="0,100,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" 
                   ItemsSource="{Binding FeatureLayers}" DisplayMemberPath="Name" 
-                  SelectedItem="{Binding SelectedFeatureLayer}" />
+                  SelectedItem="{Binding SelectedFeatureLayer}" /-->
 
-        <TextBlock HorizontalAlignment="Left" FontWeight="bold"  Margin="50,150,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
-                   Text ="{Binding ResourceID}" />
+        <Button Content="Get Arches Parameters" HorizontalAlignment="Center" Margin="0,80,0,0" Grid.Row="1" VerticalAlignment="Top" Width="180" Click="Button_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="50,120,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+            Text="If you want to unregister the resource being edited click the Unregister"/>
+        <Button Content="Unregister Arches Instance" HorizontalAlignment="Center" Margin="0,170,0,0" Grid.Row="1" VerticalAlignment="Top" Width="180" Click="Button_Click_1" />
 
-        <Button Content="Get Arches Parameters" HorizontalAlignment="Center" Margin="0,170,0,0" Grid.Row="1" VerticalAlignment="Top" Width="180" Click="Button_Click"/>
-        <Button Content="Unregister Arches Instance" HorizontalAlignment="Center" Margin="0,200,0,0" Grid.Row="1" VerticalAlignment="Top" Width="180" Click="Button_Click_1" />
-
-        <TextBlock HorizontalAlignment="Left" Margin="50,250,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Left" Margin="50,210,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="2. Select a geometry and click the Submit button to replace Arches geometry" />
-        <Button Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,320,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Click="Button_Click_2" RenderTransformOrigin="0.741,1.819"/>
+        <Button Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,270,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Click="Button_Click_2" RenderTransformOrigin="0.741,1.819"/>
+
+        <TextBlock HorizontalAlignment="Left" FontWeight="bold"  Margin="50,320,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+                   Text="Resouce Instance ID being edited: " />
+        <TextBlock HorizontalAlignment="Left" FontWeight="bold"  Margin="50,350,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+                   Text="{Binding ResourceIDEdited}" />
     </Grid>
 </UserControl>
