--- a/arches_arcgispro_addin/SaveResource.xaml
+++ b/arches_arcgispro_addin/SaveResource.xaml
@@ -46,9 +46,12 @@
             Text="2. Select a geometry and click the Submit button to replace Arches geometry" />
         <Button Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,270,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Click="Button_Click_2" RenderTransformOrigin="0.741,1.819"/>
 
-        <TextBlock HorizontalAlignment="Left" FontWeight="bold"  Margin="50,320,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
-                   Text="Resouce Instance ID being edited: " />
+        <TextBlock HorizontalAlignment="Left" Margin="50,310,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+            Text="3. Continue editing attributes using Arches Resource Editor" />
         <TextBlock HorizontalAlignment="Left" FontWeight="bold"  Margin="50,350,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+                   Text="Resouce Instance ID being edited: " />
+        <TextBlock HorizontalAlignment="Left" FontWeight="bold"  Margin="50,370,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
                    Text="{Binding ResourceIDEdited}" />
+        <Button Content="Edit using Arches Resource Editor" HorizontalAlignment="Center" Margin="0,400,0,0" Grid.Row="1" VerticalAlignment="Top" Width="180" RenderTransformOrigin="0.741,1.819" Click="Button_Click_3"/>
     </Grid>
 </UserControl>
