Add a table of created resource instances in the Create Dockpane

--- a/arches_arcgispro_addin/CreateResource.xaml
+++ b/arches_arcgispro_addin/CreateResource.xaml
@@ -6,7 +6,7 @@
              xmlns:ui="clr-namespace:arches_arcgispro_addin"
              xmlns:extensions="clr-namespace:ArcGIS.Desktop.Extensions;assembly=ArcGIS.Desktop.Extensions"
              mc:Ignorable="d"
-             d:DesignHeight="500" d:DesignWidth="300"
+             d:DesignHeight="600" d:DesignWidth="300"
              d:DataContext="{Binding Path=ui.CreateResourceViewModel}">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -36,22 +36,34 @@
 
         <Button Content="Get Geometry Node Info" HorizontalAlignment="Center" Margin="0,100,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Click="Button_Click" />
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,138,0,0" Grid.Row="1" Text="Available Geometry Nodes" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,140,0,0" Grid.Row="1" Text="Available Geometry Nodes" VerticalAlignment="Top"/>
 
-        <ComboBox HorizontalAlignment="Center" Margin="0,158,0,0" Grid.Row="1" VerticalAlignment="Top" Width="210" SelectionChanged="ComboBox_SelectionChanged"
+        <ComboBox HorizontalAlignment="Center" Margin="0,160,0,0" Grid.Row="1" VerticalAlignment="Top" Width="210"
                 ItemsSource="{Binding GeometryNodes}" DisplayMemberPath="Id"
                 SelectedItem="{Binding SelectedGeometryNode, Mode=TwoWay}" />
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,198,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Center" Margin="0,200,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="2. Select a geometry and click the Submit button to create Arches geometry" />
-        <Button Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,258,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Click="Button_Click_1" />
+        <Button Name="SubmitButton" Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,260,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200"
+                IsEnabled="True" Click="Button_Click_1" />
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,288,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Center" Margin="0,290,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="3. Continue editing attributes using Arches Resource Editor" />
-        <TextBlock HorizontalAlignment="Center" FontWeight="bold"  Margin="0,328,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
-                   Text="Resouce Instance ID being edited: " />
-        <TextBlock HorizontalAlignment="Center" FontWeight="bold"  Margin="0,348,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
-                   Text="{Binding ResourceIDEdited}" />
-        <Button Content="Edit using Arches Resource Editor" HorizontalAlignment="Center" Margin="0,378,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Click="Button_Click_2" />
+
+        <ComboBox HorizontalAlignment="Center" Margin="0,400,0,0" Grid.Row="1" VerticalAlignment="Top" Width="210"
+                ItemsSource="{Binding ResourceIdsCreated}" DisplayMemberPath="Id"
+                SelectedItem="{Binding SelectedResourceId, Mode=TwoWay}" />
+
+        <Button Name="OpenChromiumButton" Content="Edit using Arches Resource Editor" HorizontalAlignment="Center" Margin="0,370,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" 
+                IsEnabled="False" Command="{Binding ButtonClick2}" />
+
+        <TextBlock HorizontalAlignment="Left" Margin="25,470,0,0" Grid.Row="1" VerticalAlignment="Top" Width="125" TextWrapping="WrapWithOverflow"
+            Text="The Resources Created" />
+        <Button Content="Clear the List" HorizontalAlignment="Right" Margin="180,470,25,0" Grid.Row="1" VerticalAlignment="Top" Width="100" Click="Button_Click_3"/>
+
+        <DataGrid HorizontalAlignment="Stretch" Height="Auto" Margin="0,500,0,0" Grid.Row="1" VerticalAlignment="Top" Width="Auto"
+              ItemsSource="{Binding ResourceIdsCreated}" Style="{DynamicResource Esri_DataGrid}" 
+              HeadersVisibility="None" AutoGenerateColumns="True" IsReadOnly="True" SelectionMode="Single" RowHeaderWidth="0"/>
+
     </Grid>
 </UserControl>
