Add a param "append" or "replace" in API req. instead of handling it

--- a/arches_arcgispro_addin/SaveResource.xaml
+++ b/arches_arcgispro_addin/SaveResource.xaml
@@ -40,7 +40,7 @@
 
         <TextBlock HorizontalAlignment="Left" Margin="50,210,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
             Text="2. Select a geometry and click the Submit button to Add" />
-        <CheckBox Content="Replace the Exsiting Geometry?" HorizontalAlignment="Left" Margin="50,250,0,0" Grid.Row="1" VerticalAlignment="Top" Checked="CheckBox_Checked" RenderTransformOrigin="0.121,0.4"/>
+        <CheckBox Content="Replace the Exsiting Geometry?" HorizontalAlignment="Left" Margin="50,250,0,0" Grid.Row="1" VerticalAlignment="Top" Unchecked="CheckBox_Unchecked" Checked="CheckBox_Checked" RenderTransformOrigin="0.121,0.4"/>
         <Button Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,290,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Click="Button_Click_2" RenderTransformOrigin="0.741,1.819"/>
 
         <TextBlock HorizontalAlignment="Left" Margin="50,330,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
