--- a/arches_arcgispro_addin/CreateResource.xaml
+++ b/arches_arcgispro_addin/CreateResource.xaml
@@ -31,37 +31,37 @@
       </TextBlock>
         </DockPanel>
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Left" Margin="20,20,0,0" Grid.Row="1" VerticalAlignment="Top" TextWrapping="WrapWithOverflow"
             Text="1. To Start creating, select a Geometry Node from the resource model to create a new resource instance click the Select button"/>
 
-        <Button Content="Get Geometry Node Info" HorizontalAlignment="Center" Margin="0,100,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Click="Button_Click" />
+        <Button Content="Get Geometry Node Info" HorizontalAlignment="Left" Margin="50,100,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" Click="Button_Click" />
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,140,0,0" Grid.Row="1" Text="Available Geometry Nodes" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="20,150,0,0" Grid.Row="1" Text="Available Geometry Nodes" VerticalAlignment="Top"/>
 
-        <ComboBox HorizontalAlignment="Center" Margin="0,160,0,0" Grid.Row="1" VerticalAlignment="Top" Width="210"
+        <ComboBox HorizontalAlignment="Left" Margin="50,170,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200"
                 ItemsSource="{Binding GeometryNodes}" DisplayMemberPath="Name"
                 SelectedItem="{Binding SelectedGeometryNode, Mode=TwoWay}" />
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,200,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Left" Margin="20,210,0,0" Grid.Row="1" VerticalAlignment="Top" TextWrapping="WrapWithOverflow"
             Text="2. Select a geometry and click the Submit button to create Arches geometry" />
-        <Button Name="SubmitButton" Content="Submit to Arches" HorizontalAlignment="Center" Margin="0,260,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200"
+        <Button Name="SubmitButton" Content="Submit to Arches" HorizontalAlignment="Left" Margin="50,270,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200"
                 IsEnabled="True" Click="Button_Click_1" />
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,290,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Left" Margin="20,310,0,0" Grid.Row="1" VerticalAlignment="Top" TextWrapping="WrapWithOverflow"
             Text="3. Continue editing attributes using Arches Resource Editor" />
 
-        <ComboBox HorizontalAlignment="Center" Margin="0,400,0,0" Grid.Row="1" VerticalAlignment="Top" Width="210"
+        <Button Name="OpenChromiumButton" Content="Edit using Arches Resource Editor" HorizontalAlignment="Center" Margin="0,390,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" 
+                IsEnabled="False" Command="{Binding ButtonClick2}" />
+
+        <ComboBox HorizontalAlignment="Left" Margin="50,440,0,0" Grid.Row="1" VerticalAlignment="Top" Width="210"
                 ItemsSource="{Binding ResourceIdsCreated}" DisplayMemberPath="Name"
                 SelectedItem="{Binding SelectedResourceId, Mode=TwoWay}" />
 
-        <Button Name="OpenChromiumButton" Content="Edit using Arches Resource Editor" HorizontalAlignment="Center" Margin="0,370,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" 
-                IsEnabled="False" Command="{Binding ButtonClick2}" />
-
-        <TextBlock HorizontalAlignment="Left" Margin="25,470,0,0" Grid.Row="1" VerticalAlignment="Top" Width="125" TextWrapping="WrapWithOverflow"
+        <TextBlock HorizontalAlignment="Left" Margin="20,490,0,0" Grid.Row="1" VerticalAlignment="Top" Width="125" TextWrapping="WrapWithOverflow"
             Text="The Resources Created" />
-        <Button Content="Clear the List" HorizontalAlignment="Right" Margin="180,470,25,0" Grid.Row="1" VerticalAlignment="Top" Width="100" Click="Button_Click_3"/>
+        <Button Content="Clear the List" HorizontalAlignment="Right" Margin="180,480,25,0" Grid.Row="1" VerticalAlignment="Top" Height="30"  Width="100" Click="Button_Click_3"/>
 
-        <DataGrid HorizontalAlignment="Stretch" Height="Auto" Margin="0,500,0,0" Grid.Row="1" VerticalAlignment="Top" Width="Auto"
+        <DataGrid HorizontalAlignment="Stretch" Height="Auto" Margin="0,520,0,0" Grid.Row="1" VerticalAlignment="Top" Width="Auto"
               ItemsSource="{Binding ResourceIdsCreated}" Style="{DynamicResource Esri_DataGrid}" 
               HeadersVisibility="None" AutoGenerateColumns="True" IsReadOnly="True" SelectionMode="Single" RowHeaderWidth="0"/>
 
