--- a/arches_arcgispro_addin/MainDockpane.xaml
+++ b/arches_arcgispro_addin/MainDockpane.xaml
@@ -39,7 +39,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="20,135,0,0" Grid.Row="1" Text="Password" VerticalAlignment="Top" Width="250"/>
         <Button Content="Connect" HorizontalAlignment="Left" Margin="30,200,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="100" Click="Button_Click"/>
         <Button Content="Cancel" HorizontalAlignment="Left" Margin="170,200,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="100" Click="Button_Click_1"/>
-        <Button Content="Create New Resource Instance" HorizontalAlignment="Left" Margin="50,260,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" Click="Button_Click_2"/>
-        <Button Content="Edit Existing Resource Instance" HorizontalAlignment="Left" Margin="50,300,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" Click="Button_Click_3"/>
+        <Button Name="CreateResourceButton" Content="Create New Resource Instance" HorizontalAlignment="Left" Margin="50,260,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" IsEnabled="False" Click="Button_Click_2"/>
+        <Button Name="EditResourceButton" Content="Edit Existing Resource Instance" HorizontalAlignment="Left" Margin="50,300,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" IsEnabled="False" Click="Button_Click_3"/>
     </Grid>
 </UserControl>
