--- a/arches_arcgispro_addin/MainDockpane.xaml
+++ b/arches_arcgispro_addin/MainDockpane.xaml
@@ -6,7 +6,7 @@
              xmlns:ui="clr-namespace:arches_arcgispro_addin"
              xmlns:extensions="clr-namespace:ArcGIS.Desktop.Extensions;assembly=ArcGIS.Desktop.Extensions"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="300"
+             d:DesignHeight="450" d:DesignWidth="340"
              d:DataContext="{Binding Path=ui.MainDockpaneViewModel}">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -21,7 +21,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <DockPanel Grid.Row="0" LastChildFill="true" KeyboardNavigation.TabNavigation="Local" Height="30">
+        <!--DockPanel Grid.Row="0" LastChildFill="true" KeyboardNavigation.TabNavigation="Local" Height="30">
             <TextBlock Grid.Column="1" Text="{Binding Heading}" Style="{DynamicResource Esri_TextBlockDockPaneHeader}">
                 <TextBlock.ToolTip>
                     <WrapPanel Orientation="Vertical" MaxWidth="300">
@@ -29,17 +29,23 @@
                     </WrapPanel>
                 </TextBlock.ToolTip>
             </TextBlock>
-        </DockPanel>
-        <TextBox Name="InstanceURL" HorizontalAlignment="Left" Height="23" Margin="20,55,0,0" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <TextBox Name="Username" HorizontalAlignment="Left" Height="23" Margin="20,105,0,0" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <PasswordBox Name="Password" HorizontalAlignment="Left" Height="23" Margin="20,155,0,0" Grid.Row="1" Password="" VerticalAlignment="Top" Width="250"/>
-        <TextBlock HorizontalAlignment="Left" Margin="20,15,0,0" Grid.Row="1" Text="Instance URL" VerticalAlignment="Top" Width="250"/>
-        <TextBlock HorizontalAlignment="Left" Margin="20,35,0,0" Grid.Row="1" Text="ex) http://your.ogranization.org/" VerticalAlignment="Top" Width="250"/>
-        <TextBlock HorizontalAlignment="Left" Margin="20,85,0,0" Grid.Row="1" Text="Username" VerticalAlignment="Top" Width="250"/>
-        <TextBlock HorizontalAlignment="Left" Margin="20,135,0,0" Grid.Row="1" Text="Password" VerticalAlignment="Top" Width="250"/>
-        <Button Content="Connect" HorizontalAlignment="Left" Margin="30,200,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="100" Click="Button_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="170,200,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="100" Click="Button_Click_1"/>
-        <Button Name="CreateResourceButton" Content="Create New Resource Instance" HorizontalAlignment="Left" Margin="50,260,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" IsEnabled="False" Click="Button_Click_2"/>
-        <Button Name="EditResourceButton" Content="Edit Existing Resource Instance" HorizontalAlignment="Left" Margin="50,300,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="200" IsEnabled="False" Click="Button_Click_3"/>
+        </-->
+        <TextBlock HorizontalAlignment="Left" Margin="20,20,0,0" Grid.Row="1" Text="Arches Server (http://myserver.com/)" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="InstanceURL" HorizontalAlignment="Left" Height="25" Margin="20,40,0,0" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="20,80,0,0" Grid.Row="1" Text="User Name" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="Username" HorizontalAlignment="Left" Height="25" Margin="20,100,0,0" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="20,140,0,0" Grid.Row="1" Text="Password" VerticalAlignment="Top" Width="300"/>
+        <PasswordBox Name="Password" HorizontalAlignment="Left" Height="25" Margin="20,160,0,0" Grid.Row="1" Password="" VerticalAlignment="Top" Width="300"/>
+
+        <Button Content="Connect" HorizontalAlignment="Left" Margin="20,200,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="145" Click="Button_Click"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="175,200,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="145" Click="Button_Click_1"/>
+        
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="85" Margin="20,250,0,0" Visibility="Visible" Grid.RowSpan="2" Stroke="DarkGray" VerticalAlignment="Top" Width="300"/>
+        <TextBlock HorizontalAlignment="Left" Margin="30,260,0,0" Grid.Row="1" Text="Binding for _message" VerticalAlignment="Top" Width="300"/>
+
+        <Button Name="CreateResourceButton" Content="Create New Resource Instance" HorizontalAlignment="Left" Margin="20,0,0,50" Grid.Row="1" VerticalAlignment="Bottom" Height="25" Width="300" IsEnabled="False" Click="Button_Click_2"/>
+        <Button Name="EditResourceButton" Content="Edit Existing Resource Instance" HorizontalAlignment="Left" Margin="20,0,0,20" Grid.Row="1" VerticalAlignment="Bottom" Height="25" Width="300" IsEnabled="False" Click="Button_Click_3"/>
     </Grid>
 </UserControl>
